--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Pria Tajir Company - an independent Online Media Buying Agency |     priatajir.com</title>
+    <title>Menol Media - an independent Online Media Buying Agency | Menol.me</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top"  onclick = $("#menu-close").click(); >Pria Tajir Company</a>
+                <a href="#top"  onclick = $("#menu-close").click(); >Menol Media</a>
             </li>
             <li>
                 <a href="#top" onclick = $("#menu-close").click(); >Home</a>
@@ -58,7 +58,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Pria Tajir Company</h1>
+            <h1>Menol Media</h1>
             <h3>an independent Online Media Buying Agency. </h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
@@ -164,7 +164,7 @@
                 <div class="col-lg-12 text-center">
                     <h3>Partner with us to scale your Campaigns Today!</h3>
                     <a href="tel:+62818634553" class="btn btn-lg btn-light">Call Us!</a>
-                    <a href="mailto:contact@priatajir.com" class="btn btn-lg btn-dark">Email Us!</a>
+                    <a href="mailto:ceo@menol.me" class="btn btn-lg btn-dark">Email Us!</a>
                 </div>
             </div>
         </div>
@@ -183,12 +183,12 @@
         <div id="contact" class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Pria Tajir Company</strong>
+                    <h4><strong>Menol Media</strong>
                     </h4>
-                    <p>Amis Enam No. 2, Rt 002 Rw 006<br>Cikedung, Indramayu - Indonrsia 45262</p>
+                    <p>Amis Enam No. 2, Rt 002 Rw 006<br>Cikedung, Indramayu - Indonesia 45262</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> +62 818 634 553</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:contact@priatajir.com">contact@priatajir.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:contact@priatajir.com">ceo@menol.me</a>
                         </li>
                     </ul>
                     <br>
@@ -206,7 +206,7 @@
                     </ul>
                     -->
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Pria Tajir Company 2015</p>
+                    <p class="text-muted">Copyright &copy; menol.me 2015</p>
                 </div>
             </div>
         </div>
