--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>We drive quality traffic with creative idea &amp; plan to provide low risk high ROI marketing.</h2>
-                    <p class="lead">Pria Tajir Company was founded by Sudarmono in July 2015. With a background Information of Technology and Design Communication &amp; Visual that already have work experience since 2012 in a local Advertising Agency then We make online Advertising Agency.</p>
+                    <p class="lead">Menol Media was founded by Sudarmono (Dermy) in July 2015. With a background Information of Technology and Design Communication &amp; Visual that already have work experience since 2012 in a local Advertising Agency then We make online Advertising Agency.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -206,7 +206,7 @@
                     </ul>
                     -->
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; menol.me 2015</p>
+                    <p class="text-muted">Copyright &copy; menol.me 2016</p>
                 </div>
             </div>
         </div>
